--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 playwright = "^1.45.0"
+requests = "^2.32.3"
+aiohttp = "^3.9.5"
 
 
 [build-system]
