--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,9 @@ bcrypt = "^4.2.0"
 python-multipart = "^0.0.9"
 sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
 alembic = "^1.13.2"
+pytest = "^8.3.2"
+httpx = "^0.27.0"
+pytest-asyncio = "^0.23.8"
 
 
 [build-system]
