--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,8 @@ pytest = "^8.3.2"
 httpx = "^0.27.0"
 pytest-asyncio = "^0.23.8"
 websockets = "^12.0"
+pandas = "^2.2.2"
+openpyxl = "^3.1.5"
 
 
 [build-system]
