--- a/app/core/.env
+++ b/app/core/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql+asyncpg://postgres:MYZ854VWYZ8678@emex-bd-291a20:5432/emex_base
+DATABASE_URL=postgresql+asyncpg://postgres:MYZ854VWYZ8678@emex-base-584b89:5432/emex_base
