--- a/app/core/.env
+++ b/app/core/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=postgresql+asyncpg://postgres:MYZ854VWYZ8678@emex-base-584b89:5432/emex_base
+DATABASE_URL=postgresql+asyncpg://postgres:MYZ854VWYZ8678@emex-emex-9e56c6:5432/emex_base
 API_TOKEN=fea1d0c98a179dfc855b7255d801b7f0
