--- a/app/core/.env
+++ b/app/core/.env
@@ -1,2 +1,10 @@
 DATABASE_URL=postgresql+asyncpg://postgres:MYZ854VWYZ8678@localhost:5432/emex_base
 API_TOKEN=fea1d0c98a179dfc855b7255d801b7f0
+DBNAME=emex_base
+USER=postgres
+PASSWORD=MYZ854VWYZ8678
+HOST=localhost
+PORT=5432
+ADMIN_PASSWORD=qwfj15nxjaf
+NEWUSER_PASSWORD=32187fdhfds
+SIMPLE_PASSWORD=sdajg3tgsdg3
