--- a/app/core/.env
+++ b/app/core/.env
@@ -8,3 +8,7 @@ PORT=5432
 ADMIN_PASSWORD=qwfj15nxjaf
 NEWUSER_PASSWORD=32187fdhfds
 SIMPLE_PASSWORD=sdajg3tgsdg3
+string_PASSWORD=string
+string_admin_PASSWORD=string_admin
+login_proxy=LorNNF
+password_proxy=fr4B7cGdyS
