--- a/app/core/.env
+++ b/app/core/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql+asyncpg://postgres:MYZ854VWYZ8678@localhost:5432/emex_base
+DATABASE_URL=postgresql+asyncpg://postgres:MYZ854VWYZ8678@emex-emex-0dcdc5:5432/emex_base
 API_TOKEN=fea1d0c98a179dfc855b7255d801b7f0
 DBNAME=emex_base
 USER=postgres
