--- a/app/core/.env
+++ b/app/core/.env
@@ -3,7 +3,7 @@ API_TOKEN=fea1d0c98a179dfc855b7255d801b7f0
 DBNAME=emex_base
 USER=postgres
 PASSWORD=MYZ854VWYZ8678
-HOST=localhost
+HOST=emex-emex-0dcdc5
 PORT=5432
 ADMIN_PASSWORD=qwfj15nxjaf
 NEWUSER_PASSWORD=32187fdhfds
