add .env, add database proxy

--- a/app/core/.env
+++ b/app/core/.env
@@ -10,5 +10,5 @@ NEWUSER_PASSWORD=32187fdhfds
 SIMPLE_PASSWORD=sdajg3tgsdg3
 string_PASSWORD=string
 string_admin_PASSWORD=string_admin
-login_proxy=LorNNF
-password_proxy=fr4B7cGdyS
+login_proxy=Ib5ni8
+password_proxy=hgcniZGmBh
