--- a/app/core/.env
+++ b/app/core/.env
@@ -1,14 +1,14 @@
-DATABASE_URL=postgresql+asyncpg://postgres:MYZ854VWYZ8678@localhost:5432/emex_base
+DATABASE_URL=postgresql+asyncpg://postgres:MYZ854VWYZ8678@amex-emex-719835:5432/emex_base
 API_TOKEN=fea1d0c98a179dfc855b7255d801b7f0
 DBNAME=emex_base
 USER=postgres
 PASSWORD=MYZ854VWYZ8678
-HOST=localhost
+HOST=amex-emex-719835
 PORT=5432
 ADMIN_PASSWORD=qwfj15nxjaf
 NEWUSER_PASSWORD=32187fdhfds
 SIMPLE_PASSWORD=sdajg3tgsdg3
 string_PASSWORD=string
 string_admin_PASSWORD=string_admin
-login_proxy=LorNNF
-password_proxy=fr4B7cGdyS
+login_proxy=Ib5ni8
+password_proxy=hgcniZGmBh
