add login and password

--- a/app/core/.env
+++ b/app/core/.env
@@ -12,3 +12,6 @@ string_PASSWORD=string
 string_admin_PASSWORD=string_admin
 login_proxy=LorNNF
 password_proxy=fr4B7cGdyS
+
+login1_proxy=1ug5yA
+password1_proxy=BahNAREc9T
