--- a/app/core/.env
+++ b/app/core/.env
@@ -1,9 +1,9 @@
-DATABASE_URL=postgresql+asyncpg://postgres:MYZ854VWYZ8678@amex-emex-b03d70:5432/emex_base
+DATABASE_URL=postgresql+asyncpg://postgres:MYZ854VWYZ8678@amex-emex-86e3db:5432/emex_base
 API_TOKEN=fea1d0c98a179dfc855b7255d801b7f0
 DBNAME=emex_base
 USER=postgres
 PASSWORD=MYZ854VWYZ8678
-HOST=amex-emex-b03d70
+HOST=amex-emex-86e3db
 PORT=5432
 ADMIN_PASSWORD=qwfj15nxjaf
 NEWUSER_PASSWORD=32187fdhfds
@@ -15,3 +15,6 @@ password_proxy=fr4B7cGdyS
 
 login1_proxy=1ug5yA
 password1_proxy=BahNAREc9T
+
+login2_proxy=8VrVq8
+password2_proxy=x7dxUj
