--- a/app/core/.env
+++ b/app/core/.env
@@ -1,9 +1,9 @@
-DATABASE_URL=postgresql+asyncpg://postgres:MYZ854VWYZ8678@amex-emex-70325a:5432/emex_base
+DATABASE_URL=postgresql+asyncpg://postgres:MYZ854VWYZ8678@amex-emex-16bba2:5432/emex_base
 API_TOKEN=fea1d0c98a179dfc855b7255d801b7f0
 DBNAME=emex_base
 USER=postgres
 PASSWORD=MYZ854VWYZ8678
-HOST=amex-emex-70325a
+HOST=amex-emex-16bba2
 PORT=5432
 ADMIN_PASSWORD=qwfj15nxjaf
 NEWUSER_PASSWORD=32187fdhfds
