--- a/alembic.ini
+++ b/alembic.ini
@@ -60,7 +60,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql+asyncpg://postgres:MYZ854VWYZ8678@emex-emex-658238:5432/emex_base
+sqlalchemy.url = postgresql+asyncpg://postgres:MYZ854VWYZ8678@emex-emex-a3aade:5432/emex_base
 
 
 [post_write_hooks]
