--- a/app/core/.env
+++ b/app/core/.env
@@ -1,9 +1,9 @@
-DATABASE_URL=postgresql+asyncpg://postgres:MYZ854VWYZ8678@localhost:5432/emex_base
+DATABASE_URL=postgresql+asyncpg://postgres:MYZ854VWYZ8678@emex-emex-5509ce:5432/emex_base
 API_TOKEN=ec760289ea-5451c489a2-07efcb8602
 DBNAME=emex_base
 USER=postgres
 PASSWORD=MYZ854VWYZ8678
-HOST=localhost
+HOST=emex-emex-5509ce
 PORT=5432
 ADMIN_PASSWORD=qwfj15nxjaf
 NEWUSER_PASSWORD=32187fdhfds
