add endpoint gigabyte brightdata

--- a/app/core/.env
+++ b/app/core/.env
@@ -1,15 +1,17 @@
-DATABASE_URL=postgresql+asyncpg://postgres:MYZ854VWYZ8678@emex-emex-5509ce:5432/emex_base
+DATABASE_URL=postgresql+asyncpg://postgres:MYZ854VWYZ8678@localhost:5432/emex_base
 API_TOKEN=ec760289ea-5451c489a2-07efcb8602
 DBNAME=emex_base
 USER=postgres
 PASSWORD=MYZ854VWYZ8678
-HOST=emex-emex-5509ce
+HOST=localhost
 PORT=5432
 ADMIN_PASSWORD=qwfj15nxjaf
 NEWUSER_PASSWORD=32187fdhfds
 SIMPLE_PASSWORD=sdajg3tgsdg3
 string_PASSWORD=string
 string_admin_PASSWORD=string_admin
+BRIGHT_DATA_TOKEN=7fda43a7-3877-4c2b-8c19-872da1ebcef6
+
 login_proxy=LorNNF
 password_proxy=fr4B7cGdyS
 
