error repair, edit configuration

--- a/alembic.ini
+++ b/alembic.ini
@@ -60,7 +60,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql+asyncpg://postgres:MYZ854VWYZ8678@emex-emex-51d133:5432/emex_base
+sqlalchemy.url = postgresql+asyncpg://postgres:MYZ854VWYZ8678@emex-emex-6fab25:5432/emex_base
 ; sqlalchemy.url = postgresql+asyncpg://postgres:MYZ854VWYZ8678@localhost:5432/emex_base
 
 
