--- a/app/api_v1/parser_emex/.env
+++ b/app/api_v1/parser_emex/.env
@@ -1,2 +1,2 @@
 MANGOPROXY=http://n66063054a6f17c192a006d-zone-custom-region-ru:b151e67bc2b9462683bdab5eb1ff4acc@p1.mangoproxy.com:2333
-BRIGHTDATAPROXY=http://brd-customer-hl_c9ea19fa-zone-amex-country-ru:0f00e9ns3bqh@brd.superproxy.io:22225
+BRIGHTDATAPROXY=http://brd-customer-hl_c9ea19fa-zone-datacenter_proxy1-country-ru:r32pcy5f8qra@brd.superproxy.io:22225
