--- a/app/api_v1/parser_emex/.env
+++ b/app/api_v1/parser_emex/.env
@@ -1,4 +1,4 @@
 MANGOPROXY=http://n66063054a6f17c192a006d-zone-custom-region-ru-session-dqt7kex9v-sessTime-0.5:b151e67bc2b9462683bdab5eb1ff4acc@p1.mangoproxy.com:2334
 BRIGHTDATAPROXY=http://brd-customer-hl_08868897-zone-emex_ru-country-ru:k02s9dglsx7y@brd.superproxy.io:22225
-BRIGHTDATAPROXY1=http://brd-customer-hl_08868897-zone-emex_georgia-country-ge:a8fvyr0ejdcm@brd.superproxy.io:22225
+BRIGHTDATAPROXY1=http://brd-customer-hl_08a42b3a-zone-datacenter_as-country-ge:7p3s69g3c84m@brd.superproxy.io:33335
 BRIGHTDATAPROXY2=http://brd-customer-hl_08868897-zone-emex_azer-country-az:havqprjhf28o@brd.superproxy.io:22225
