--- a/app/core/.env
+++ b/app/core/.env
@@ -1,9 +1,9 @@
-DATABASE_URL=postgresql+asyncpg://postgres:MYZ854VWYZ8678@emex-emex-53d629:5432/emex_base
+DATABASE_URL=postgresql+asyncpg://postgres:MYZ854VWYZ8678@emex-emexsecond-349134:5432/emex_base
 API_TOKEN=ec760289ea-5451c489a2-07efcb8602
-DBNAME=emex_base
+DBNAME=emex_base2
 USER=postgres
 PASSWORD=MYZ854VWYZ8678
-HOST=emex-emex-53d629
+HOST=emex-emexsecond-349134
 PORT=5432
 ADMIN_PASSWORD=qwfj15nxjaf
 NEWUSER_PASSWORD=32187fdhfds
