--- a/app/core/.env
+++ b/app/core/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql+asyncpg://postgres:MYZ854VWYZ8678@emex-emexsecond-349134:5432/emex_base
+DATABASE_URL=postgresql+asyncpg://postgres:MYZ854VWYZ8678@emex-emexsecond-349134:5432/emex_base2
 API_TOKEN=ec760289ea-5451c489a2-07efcb8602
 DBNAME=emex_base2
 USER=postgres
