--- a/app/core/.env
+++ b/app/core/.env
@@ -3,7 +3,7 @@ API_TOKEN=ec760289ea-5451c489a2-07efcb8602
 DBNAME=emex_base
 USER=postgres
 PASSWORD=MYZ854VWYZ8678
-HOST=emex-emex-53d629
+HOST=emexparser-db-gedwoa.1.77ng5k5hpt6165j3q8nplotod
 PORT=5432
 ADMIN_PASSWORD=qwfj15nxjaf
 NEWUSER_PASSWORD=32187fdhfds
