--- a/app/core/.env
+++ b/app/core/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql+asyncpg://postgres:MYZ854VWYZ8678@emex-emex-53d629:5432/emex_base
+DATABASE_URL=postgresql+asyncpg://postgres:MYZ854VWYZ8678@emexparser-db-gedwoa:5432/emex_base
 API_TOKEN=ec760289ea-5451c489a2-07efcb8602
 DBNAME=emex_base
 USER=postgres
