--- a/app/api_v1/parser_emex/.env
+++ b/app/api_v1/parser_emex/.env
@@ -1,4 +1,4 @@
 MANGOPROXY=http://n66063054a6f17c192a006d-zone-custom-region-ru-session-dqt7kex9v-sessTime-0.5:b151e67bc2b9462683bdab5eb1ff4acc@p1.mangoproxy.com:2334
-BRIGHTDATAPROXY1=http://brd-customer-hl_38726487-zone-emex_georiga-country-ge:x411ewpzw00m@brd.superproxy.io:33335
-BRIGHTDATAPROXY2=http://brd-customer-hl_38726487-zone-armenia_proxy-country-am:xrriovlu3475@brd.superproxy.io:33335
-BRIGHTDATAPROXY3=http://brd-customer-hl_38726487-zone-azer_proxy-country-az:s5rjdd6wd0fq@brd.superproxy.io:33335
+BRIGHTDATAPROXY1=http://brd-customer-hl_38726487-zone-belarus:5o1kr3jna8i6@brd.superproxy.io:33335
+BRIGHTDATAPROXY2=http://brd-customer-hl_38726487-zone-kirgiziaproxy:a8htd85tz05z@brd.superproxy.io:33335
+BRIGHTDATAPROXY3=http://brd-customer-hl_38726487-zone-uzbekistanproxy:tkpdkxh3oz3m@brd.superproxy.io:33335
